# probresolve-backend

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
alembic/: env.py
alembic/versions/: 0001_initial.py  0002_add_problem_fields.py  0003_trust_and_resolution.py  ccd97e7457f5_add_user_id_to_problem.py
app/: config.py  database.py  deps.py  escalation.py  main.py  models.py  schemas.py
app/routes/: admin.py  api_routes.py  pages.py  problems.py
app/services/: category_service.py  problem_service.py  report_service.py  upload_service.py  upvote_service.py
app/templates/: base.html
app/templates/admin/: dashboard.html
app/templates/errors/: 404.html  500.html
scripts/: generate_sitemap.py  reset_db_and_reseed.py  seed.py
